# Forge-Scan

./: .gitignore  .trivyignore  CHANGELOG.md  ForgeRedOps_Design_Document (1).docx  ForgeScan360_Architecture_Diagrams (1).html  ForgeScan360_Architecture_Diagrams.html  ForgeScan360_Complete_v2 (4).html  ForgeScan360_Enhanced_UI.html  Forge_Modular_Architecture_Design.md  LICENSE  README.md
.github/workflows/: build-docker.yml  ci.yml  cloudflare.yml  release-binaries.yml
cloudflare/forgescan-api/: package-lock.json  package.json  wrangler.jsonc  wrangler.toml
cloudflare/forgescan-api/migrations/: 000_core.sql  001_auth.sql  002_nvd_sync.sql  003_scanner.sql  004_integrations.sql  005_notifications.sql  006_compliance.sql  007_reports.sql  008_redops.sql  009_event_bus.sql  009_seed_demo_data.sql  010_forgesoc.sql  011_sprint4.sql  012_forgeml.sql  013_mssp.sql  014_competitive_features.sql  015_capture.sql  015_repair_core_org_id.sql  016_backfill_org_id.sql  017_session_security.sql  018_features.sql  019_comply360_integration.sql
cloudflare/forgescan-api/src/: index.ts  openapi.ts  test-helpers.ts
cloudflare/forgescan-dashboard/: .env.example  .env.production  .gitignore  DEPLOY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc  wrangler.toml
cloudflare/forgescan-dashboard/src/: App.tsx  index.css
deploy/: README.md
deploy/helm/forgescan/: Chart.yaml  values.yaml
deploy/hetzner/: .env.example  docker-compose.yml  install.sh
deploy/kubernetes/base/: api-deployment.yaml  configmap.yaml  database.yaml  ingress.yaml  kustomization.yaml  (+3 more)
deploy/onprem/: install-windows.ps1  install.sh
deploy/xiid/: Caddyfile  README.md  hetzner-provision.sh  install-infra.sh  install-stlink-scanner.sh  stlink-scanner.service
docs/: architecture.md  customer-onboarding-checklist.md  deployment-runbook.md  how-forgescan-works.md  user-guide.md
docs/design/: ForgeSOC_Design_Document.docx  ForgeScan360_Enhanced_UI.html
docs/security/: config-management.md  environment-config.md  release-process.md  scanner-capabilities.md  scanner-hardening.md
engine/: Cargo.toml  Cross.toml  Dockerfile.agent  Dockerfile.scanner  Makefile  audit.toml  deny.toml
engine/checks/: CHECK-FORMAT.yaml
engine/checks/cis/: FSC-CIS-LIN-0001.yaml  FSC-CIS-LIN-0002.yaml  FSC-CIS-LIN-0003.yaml  FSC-CIS-WIN-0001.yaml
engine/checks/cis/linux/: ssh.yaml
engine/checks/cis/windows/: password-policy.yaml
engine/checks/cloud/: FSC-CLOUD-AWS-0001.yaml  FSC-CLOUD-AWS-0002.yaml
engine/checks/configuration/: FSC-CFG-0001.yaml  FSC-CFG-0002.yaml  FSC-CFG-0003.yaml  FSC-CFG-0004.yaml  FSC-CFG-0005.yaml  FSC-CFG-0006.yaml  FSC-CFG-0010.yaml
engine/checks/iomt/: device-fingerprints.yaml
engine/checks/iomt/compliance/: FSC-IoMT-FDA-0001.yaml  FSC-IoMT-HIPAA-0001.yaml  FSC-IoMT-HIPAA-0002.yaml
engine/checks/iomt/devices/: FSC-IoMT-DEV-0001.yaml  FSC-IoMT-DEV-0002.yaml
engine/checks/iomt/protocols/: FSC-IoMT-BACNET-0001.yaml  FSC-IoMT-DICOM-0001.yaml  FSC-IoMT-DICOM-0002.yaml  FSC-IoMT-HL7-0001.yaml  FSC-IoMT-HL7-0002.yaml  FSC-IoMT-MODBUS-0001.yaml  FSC-IoMT-MQTT-0001.yaml
engine/checks/iomt/safe-scan/: FSC-IoMT-SAFE-0001.yaml  FSC-IoMT-SAFE-0002.yaml
engine/checks/network/: FSC-NET-0001.yaml  FSC-NET-0002.yaml  FSC-NET-0003.yaml  FSC-NET-0004.yaml  FSC-NET-0005.yaml  FSC-NET-0006.yaml
engine/checks/vuln/: FSC-VULN-0001.yaml  FSC-VULN-0002.yaml  FSC-VULN-0003.yaml  FSC-VULN-0004.yaml  FSC-VULN-0005.yaml  FSC-VULN-0006.yaml  FSC-VULN-0007.yaml  FSC-VULN-0008.yaml  FSC-VULN-0010.yaml  FSC-VULN-0011.yaml  FSC-VULN-0012.yaml
engine/checks/webapp/: FSC-WEBAPP-0001.yaml  FSC-WEBAPP-0002.yaml
engine/config/: agent.example.toml  scanner.example.toml
engine/crates/forgescan-agent/: Cargo.toml
engine/crates/forgescan-agent/src/: main.rs
engine/crates/forgescan-checks/: Cargo.toml
engine/crates/forgescan-checks/src/: lib.rs  loader.rs  registry.rs  yaml_check.rs
engine/crates/forgescan-cloud/: Cargo.toml
engine/crates/forgescan-cloud/src/: aws.rs  checks.rs  lib.rs
engine/crates/forgescan-common/: Cargo.toml
engine/crates/forgescan-common/src/: config.rs  crypto.rs  lib.rs  logging.rs  scope.rs
engine/crates/forgescan-config-audit/: Cargo.toml
engine/crates/forgescan-config-audit/src/: auditor.rs  checks.rs  collectors.rs  lib.rs  linux.rs  windows.rs
engine/crates/forgescan-core/: Cargo.toml
engine/crates/forgescan-core/src/: check.rs  error.rs  finding.rs  lib.rs  severity.rs  target.rs
engine/crates/forgescan-hipaa/: Cargo.toml
engine/crates/forgescan-hipaa/src/: fc360.rs  hccra.rs  lib.rs  mapper.rs  pdf.rs  report.rs  safeguards.rs
engine/crates/forgescan-ingest/: Cargo.toml
engine/crates/forgescan-ingest/src/: lib.rs  normalize.rs  qualys.rs  rapid7.rs  tenable.rs
engine/crates/forgescan-ingest/src/formats/: csv.rs  json.rs  mod.rs  nessus.rs  qualys_xml.rs
engine/crates/forgescan-network/: Cargo.toml
engine/crates/forgescan-network/src/: banner.rs  capture.rs  discovery.rs  fingerprint.rs  iomt_fingerprint.rs  lib.rs  passive.rs  port_scan.rs  segmentation.rs  segmentation_alert.rs  segmentation_report.rs  service_detect.rs
engine/crates/forgescan-nvd/: Cargo.toml
engine/crates/forgescan-nvd/src/: cpe.rs  database.rs  lib.rs  scheduler.rs  sync.rs
engine/crates/forgescan-scanner/: Cargo.toml
engine/crates/forgescan-scanner/benches/: scan_bench.rs
engine/crates/forgescan-scanner/src/: accuracy.rs  main.rs
engine/crates/forgescan-transport/: Cargo.toml  build.rs
engine/crates/forgescan-transport/src/: client.rs  grpc_client.rs  grpc_server.rs  lib.rs  rest_client.rs  server.rs  types.rs
engine/crates/forgescan-vuln/: Cargo.toml
engine/crates/forgescan-vuln/src/: detector.rs  frs.rs  lib.rs  matcher.rs
engine/crates/forgescan-webapp/: Cargo.toml
engine/crates/forgescan-webapp/src/: checks.rs  client.rs  crawler.rs  headers.rs  lib.rs  tls.rs
engine/proto/: agent_service.proto  common.proto  results.proto  scan_service.proto
tests/: load-test.ts
(+174 files in other folders)
