[package]
name = "forgescan-ingest"
description = "Vendor data ingestion (Tenable, Qualys, Rapid7, etc.)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
forgescan-core = { path = "../forgescan-core" }
forgescan-common = { path = "../forgescan-common" }

tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = "0.21"

# XML parsing for Nessus/Qualys formats
quick-xml = { version = "0.31", features = ["serialize"] }

# CSV parsing for some export formats
csv = "1.3"

# Async trait support
async-trait = "0.1"

# Regex for CVE/CWE extraction
regex = { workspace = true }
