[package]
name = "forgescan-network"
description = "Network discovery, port scanning, service detection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
forgescan-core = { path = "../forgescan-core" }
forgescan-common = { path = "../forgescan-common" }
tokio = { workspace = true }
socket2 = { workspace = true }
pnet = { workspace = true }
trust-dns-resolver = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
