[package]
name = "forgescan-transport"
description = "gRPC server/client for scanner-platform communication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
forgescan-core = { path = "../forgescan-core" }
forgescan-common = { path = "../forgescan-common" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tonic-build = { workspace = true }
